--- a/app/templates/cards-produtos.html
+++ b/app/templates/cards-produtos.html
@@ -14,8 +14,8 @@
                             <div class="card-title">{{ prod.nomeProduto|truncatechars:50 }}</div>
                             <div class="card-price">R$ {{ prod.precoProduto }}</div>
                             <div class="card-category"><span>Categoria: </span>{{ prod.categoriaProduto }}</div>
-                            <div class="card-descripition text-truncate" style="max-height: 3em;">{{ prod.descricaoProduto }}</div>
-                           <div class="card-descripition text-truncate" style="max-height: 3em;">{{ produto.description }}</div>
+                            <div class="card-description text-truncate" style="max-height: 3em;">{{ prod.descricaoProduto }}</div>
+                           <div class="card-description text-truncate" style="max-height: 3em;">{{ produto.description }}</div>
                             <div class="card-rating mt-auto">
                                 {% with rate=produto.rating.rate %}
                                     {% for i in "12345" %}
@@ -55,7 +55,7 @@
                             <div class="card-title">{{ produto.title|truncatechars:50 }}</div>
                             <div class="card-price">R$ {{ produto.price }}</div>
                             <div class="card-category"><span>Categoria: </span>{{ produto.category }}</div>
-                            <div class="card-descripition text-truncate" style="max-height: 3em;">{{ produto.description }}</div>
+                            <div class="card-description text-truncate" style="max-height: 3em;">{{ produto.description }}</div>
                             <div class="card-rating mt-auto">
                                 {% with rate=produto.rating.rate %}
                                     {% for i in "12345" %}
