--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -13,6 +13,7 @@
       <a href="{% url 'listarProdutos' %}"><button id="btnDashboard" class="btn ">Produtos</button></a>
       <a href="{% url 'compras' %}"><button id="btnDashboard" class="btn ">Minhas compras</button></a>
       <a href="{% url 'grafico' %}"><button id="btnDashboard" class="btn " >Visulizar Gráfico</button></a>
+      <a href="{% url 'graficoVendas' %}"><button id="btnDashboard" class="btn " >Visulizar Gráfico de vendas</button></a>
 
    </div>
 
