--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -43,8 +43,8 @@
                 <span class="mb-3 mb-md-0 text-muted">© 2025, Arthur Lopes e Sabrina Santos</span>
             </div>
 
-            <a href="/" class="d-flex align-items-center">
-            <img src="{% static 'img/logo.png' %}" alt="Logo">
+            <a href="/" class="d-flex align-items-center" >
+            <img src="{% static 'img/logo_iris.png' %}" alt="Logo"     width="110"  height= "70.5">
             </a>
 
             <ul class="nav col-md-4 justify-content-end">
