--- a/app/static/css/estilo.css
+++ b/app/static/css/estilo.css
@@ -83,6 +83,24 @@ nav {
     border: none;
     cursor: pointer;
 }
+.btn-acao {
+    background-color: #d492fd;
+    color: #F9FFFE !important;
+    margin-right: 10px; 
+    margin-left: 10px; 
+    padding: 8px 14px;
+    font-size: 10px;
+    border-radius: 18px;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+     margin: 0 10px; 
+}
+
+.btn-acao:hover {
+    background-color: #fcd48f;
+}
 
 .img-index {
     width: 100%;
@@ -130,7 +148,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 70px;
+    height: 60px;
     border-radius: 15px 15px 0px 0px;
     background-color: #F9FFFE; 
     color: #f59a0a;
