--- a/app/templates/add-usuario.html
+++ b/app/templates/add-usuario.html
@@ -60,13 +60,13 @@
 </div>
 
 {% if messages %}
-  <div class="messages">
-    {% for message in messages %}
-      <div class="alert {{ message.tags }}">
-        {{ message }}
-      </div>
-    {% endfor %}
-  </div>
+    <div class="messages">
+        {% for message in messages %}
+            <div class="alert {{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
 {% endif %}
 
 <script>
@@ -91,6 +91,10 @@
             console.log("Erro", error)
         })
     }
+    setTimeout(function() {
+        const alerts = document.querySelectorAll('.alert');
+        alerts.forEach(alert => alert.style.display = 'none');
+    }, 3000);
 
 </script>
 
