--- a/app/templates/editar-usuario.html
+++ b/app/templates/editar-usuario.html
@@ -6,8 +6,12 @@
 
 {% block 'main' %}
 <a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
+<div class="container mt-5" style="max-width: 400px;">
+    <img src="{% static 'imagem/users.png' %}" alt="">
 
-<div class="container mt-5 d-flex align-items-center justify-content-center" >
+    <div class="card shadow">
+        <div class="card-body">
+            <h1 class="card-title text-center mb-4">
     <form method="POST" id="ContainerLogin">
                 {% csrf_token %}
 
@@ -41,10 +45,19 @@
             {{ form.numero_residencia }}
         </div>
 
-        <input type="submit" value="Editar"  id="btnCadastrar">
+        <button type="submit" class="btn_cadastrar">Cadastrar</button>
     </form>
 </div>
-
+{% if messages %}
+    <div class="container mt-3">
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
 <script>
 
     function buscaCep(cep){
@@ -68,16 +81,11 @@
         })
     }
 
-</script>
+    setTimeout(function() {
+        const alerts = document.querySelectorAll('.alert');
+        alerts.forEach(alert => alert.style.display = 'none');
+    }, 3000);
 
-        {% if messages %}
-        <div class="messages">
-            {% for message in messages %}
-            <div class="alert {{ message.tags }}">
-                {{ message }}
-            </div>
-            {% endfor %}
-        </div>
-        {% endif %}
+</script>
 
 {% endblock %}
