--- a/app/templates/grafico-vendas.html
+++ b/app/templates/grafico-vendas.html
@@ -3,7 +3,6 @@
 {% block 'titulo' %} Estoque {% endblock %}
 
 {% block 'main' %}
-<a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
 <div class="caixa-grafico" style="       display: flex;
                                         flex-direction: column;
                                         align-items: center;
@@ -11,10 +10,10 @@
                                         margin-top: 2em;
                                         gap: 1em;">
 
-    <h1>Gráfico de Produtos Disponíveis no Estoque</h1>
+<a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
 
-    <img src="{{ dados }}" alt="Estoque">
-
+    <h1>Gráfico de Vendas por Dia</h1>
+    <img src="{{ dados }}" alt="Vendas" style="max-width: 100%; height: auto; border: 5px solid pink; border-radius: 12px;">
 </div>
 
 {% endblock %}
