--- a/app/templates/usuarios.html
+++ b/app/templates/usuarios.html
@@ -3,23 +3,34 @@
 {% block 'titulo' %} Usuários {% endblock %}
 
 {% block 'main' %}
-<a href="{% url 'dashboard' %}"><button id="btnVoltar" class="btn ">Voltar</button></a>
+<a href="{% url 'dashboard' %}">
+    <button id="btnVoltar" class="btn">Voltar</button>
+</a>
 
-<div class="">
+<div style="text-align: center; margin-top: 2em;">
     <h1 id="h1Usuarios">Usuários</h1>
 </div>
-    <table class="" style="width: 40%;">
-        <tr id="trUsuarios">
-            <th>Nome</th>
-            <th>E-mail</th>
-            <th colspan= "2">Ações</th>
-        </tr>
-        {% for user in listUsuarios %}
+
+<div style="display: flex; justify-content: center; margin-top: 2em;">
+    <table style="width: 60%; border-collapse: collapse;">
+        <thead>
+            <tr id="trUsuarios">
+                <th>Nome</th>
+                <th>E-mail</th>
+                <th colspan="2">Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for user in listUsuarios %}
             <tr>
-                <td>{{user.nome}}</td>
-                <td>{{user.email}}</td>
-                <td><a href="{% url 'excluirUsuario' user.id %}"> <button  id="btnExcluir"> Excluir </button> </a></td>
-                <td><a href="{% url 'editarUsuario' user.id %}"> <button id="btnEditar"> Editar</button> </a></td>
+                <td>{{ user.nome }}</td>
+                <td>{{ user.email }}</td>
+                   
+                <td>
+                     <div style="display: flex; justify-content: center;"></div>
+                    <a href="{% url 'excluirUsuario' user.id %}" class="btn-acao btn-excluir">Excluir</a>
+                    <a href="{% url 'editarUsuario' user.id %}" class="btn-acao btn-editar">Editar</a>
+                    </div>
             </tr>
         {% endfor %}
     </table>
