--- a/app/templates/add-usuario.html
+++ b/app/templates/add-usuario.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>    
                 <div class="d-grid">
-                    <button type="submit" class="btn_cadastrar">Cadastrar</button>
+                    <button type="submit" class="btn_cadastrar_usuario">Cadastrar</button>
                 </div>    
 
                 <div class="text-center mt-3">
