--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,7 +7,7 @@
 <div class="container mt-5" style="max-width: 400px;">
     <div class="card shadow">
         <div class="card-body">
-            <h2 class="card-title text-center mb-4">Área Restrita</h2>
+            <h2 class="card-title text-center mb-4">Área de Login</h2>
             <form action="{% url 'login' %}" method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
