--- a/app/templates/usuarios.html
+++ b/app/templates/usuarios.html
@@ -3,36 +3,33 @@
 {% block 'titulo' %} Usuários {% endblock %}
 
 {% block 'main' %}
-<a href="{% url 'dashboard' %}">
-    <button id="btnVoltar" class="btn">Voltar</button>
-</a>
-
-<div style="text-align: center; margin-top: 2em;">
-    <h1 id="h1Usuarios">Usuários</h1>
+<div class="position-relative mb-4 mt-6" style="width: 100%;">
+    <a href="{% url 'dashboard' %}" class="btn_voltar position-absolute start-0" style="left:0;">
+        Voltar
+    </a>
+    <h2 class="text-center mb-0">Usuários</h2>
 </div>
 
-<div style="display: flex; justify-content: center; margin-top: 2em;">
-    <table style="width: 60%; border-collapse: collapse;">
-        <thead>
-            <tr id="trUsuarios">
-                <th>Nome</th>
-                <th>E-mail</th>
-                <th colspan="2">Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for user in listUsuarios %}
-            <tr>
-                <td>{{ user.nome }}</td>
-                <td>{{ user.email }}</td>
-                   
-                <td>
-                     <div style="display: flex; justify-content: center;"></div>
-                    <a href="{% url 'excluirUsuario' user.id %}" class="btn-acao btn-excluir">Excluir</a>
-                    <a href="{% url 'editarUsuario' user.id %}" class="btn-acao btn-editar">Editar</a>
-                    </div>
-            </tr>
-        {% endfor %}
-    </table>
+<table class="table table-hover p-3 m-auto" style="width: 40%;">
+    <tr id="trUsuarios">
+        <th>Nome</th>
+        <th>E-mail</th>
+        <th colspan="2">Ações</th>
+    </tr>
+
+    {% for user in listUsuarios %}
+    <tr id="trProd">
+        <tr>
+            <td>{{ user.nome }}</td>
+            <td>{{ user.email }}</td>
+        <td>
+            <a href="{% url 'excluirUsuario' user.id %}" class="btn-acao btn-excluir">Excluir</a>
+        </td>
+        <td>
+            <a href="{% url 'editarUsuario' user.id %}" class="btn-acao btn-editar">Editar</a>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
 
 {% endblock %}
