--- a/app/templates/editar-usuario.html
+++ b/app/templates/editar-usuario.html
@@ -13,13 +13,14 @@
         <div class="card-body">
             <h1 class="card-title text-center mb-4">
     <form method="POST" id="ContainerLogin">
-                {% csrf_token %}
+    {% csrf_token %}
 
         {% comment %} <div class="form-group"> {% endcomment %}
 
     {{ form.nome }}
     {{ form.email }}
     {{ form.senha }}
+    {{ form.confirmar_senha }}
 
     <div class="row">
         <div class="col-md-6">
@@ -44,8 +45,7 @@
         <div class="col-md-6">
             {{ form.numero_residencia }}
         </div>
-
-        <button type="submit" class="btn_cadastrar">Cadastrar</button>
+ <button type="submit" value="Editar" class="btn_cadastrar">Editar</button>
     </form>
 </div>
 {% if messages %}
